--- a/bot/package.json
+++ b/bot/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/iwl-lyam/hhbot#readme",
   "dependencies": {
+    "discord-api-types": "^0.37.8",
     "discord.js": "^14.3.0",
     "mongodb": "^4.9.1",
     "mysql": "^2.18.1",
